# first_test

./: .gitignore  .readthedocs.yml  Makefile  README.md  project.code-workspace  start.sh
docs/markdown/: ABOUT.md  QUICKSTART.md
docs/process/: DEV_PLAN.rst
environments/python/: Dockerfile  docker-compose.yml
py_app/: README.rst  pyproject.toml  setup.py  setup.py.tmp
py_app/app/: __main__.py  start.py
py_app/app/game/: controller.py  game.py  model.py  view.py  view_cli.py
py_app/docs/source/: conf.py  index.rst
py_app/joe_first_test_app/: __main__.py  start.py
py_app/joe_first_test_app/game/: controller.py  game.py  view.py  view_cli.py
py_app/tests/: test_app.py
scripts/: clean.sh  setup.sh
scripts/bash/: install_docker.sh  local_setup.sh
scripts/make/: common.mk
scripts/python/: build.sh  configure.sh  docker.sh  publish.sh  run.sh  scan.sh
